force-app/main/default/objects/GPS_Alert__c/GPS_Alert__c.object-meta.xml
<CustomObject>
    <description>Driver behavior or vehicle alert from GPS Insight. Synced from /alert by WEXAlertSyncService.</description>
    <label>GPS Alert</label>
    <nameField>
        <displayFormat>GALT-{00000}</displayFormat>
        <label>GPS Alert Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>GPS Alerts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>