force-app/main/default/objects/GPS_Alert__c/fields/Alert_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Alert_Timestamp__c</fullName>
    <label>Alert Timestamp</label>
    <type>DateTime</type>
</CustomField>