force-app/main/default/objects/GPS_Alert__c/fields/Alert_Type__c.field-meta.xml
<CustomField>
    <fullName>Alert_Type__c</fullName>
    <description>Type of alert from GPS Insight: speeding, harsh_braking, harsh_accel, idling, geofence_exit, etc.</description>
    <label>Alert Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>