force-app/main/default/objects/GPS_Alert__c/fields/Driver__c.field-meta.xml
<CustomField>
    <fullName>Driver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Employee linked to this alert. Resolved by WEX driver ID to Driver_Assignment__c to Employee__c.</description>
    <label>Driver</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>GPS Alerts</relationshipLabel>
    <relationshipName>GPS_Alerts</relationshipName>
    <type>Lookup</type>
</CustomField>