force-app/main/default/objects/GPS_Alert__c/fields/Is_Acknowledged__c.field-meta.xml
<CustomField>
    <fullName>Is_Acknowledged__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Acknowledged</label>
    <type>Checkbox</type>
</CustomField>