force-app/main/default/objects/GPS_Alert__c/fields/Severity__c.field-meta.xml
<CustomField>
    <fullName>Severity__c</fullName>
    <description>Alert severity as reported by GPS Insight: low, medium, high.</description>
    <label>Severity</label>
    <length>50</length>
    <type>Text</type>
</CustomField>