force-app/main/default/objects/GPS_Alert__c/fields/Vehicle__c.field-meta.xml
<CustomField>
    <fullName>Vehicle__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vehicle</label>
    <referenceTo>Vehicle__c</referenceTo>
    <relationshipLabel>GPS Alerts</relationshipLabel>
    <relationshipName>GPS_Alerts</relationshipName>
    <type>Lookup</type>
</CustomField>