force-app/main/default/objects/GPS_Alert__c/fields/WEX_Alert_Id__c.field-meta.xml
<CustomField>
    <fullName>WEX_Alert_Id__c</fullName>
    <description>Unique alert identifier from GPS Insight. Used as external ID for upsert.</description>
    <externalId>true</externalId>
    <label>WEX Alert Id</label>
    <length>64</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>